:bug: Generated overflow when they are on windows

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -57,7 +57,7 @@ header {
 }
 
 .markdown-blog .embed-responsive {
-  @apply embed-responsive;
+  @apply overflow-hidden embed-responsive;
 }
 
 .markdown-content {
